@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR


Package ImportFile {
class ImportFile
}

Package Person {
class Person
}

Class HiddenOutside #FFFFFF
HiddenOutside ..> ImportFile
ImportFile *--> Person

@enduml
